apps/production/qbittorrent/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: qbittorrent
spec:
  hostnames:
    - qbittorrent.fanen.dk
